--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li>A big admirer of value investing</li>
             <li>Esatblished Buffet Partnership Ltd</li>
             <li>Secured a controlling stake in Berkshire Hathaway</li>
-            <li>He consistently has a rich and diversified portfoli</li>
+            <li>He consistently has a rich and diversified portfolio</li>
             <li>One of the most generous philanthropists in the world</li>
             <li>Awarded the Presidential Medal of Freedom</li>
           </ul>
